# GOVUK_stats_counter

./: .dockerignore  .envrc  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  get_count.py  log.jsonl  pyproject.toml  unpinned_requirements.txt
.github/workflows/: cronjob.yml  crontjob.yml  test.yml
data/: govuk_stats_log.json
docs/: WORKFLOWS.md
src/: __init__.py  config.py  create_visualization.py  get_count.py  requirements.txt  write_json_log.py
test_data/: govuk_stats_log.json  test_log.json
tests/: test_config.py  test_visualization.py  test_write_json_log.py
