[project]
name = "govuk-stats-counter"
version = "0.1.0"
description = ""
authors = [
    {name = "Matthew Upson", email = "matt@mantisnlp.com"}
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "lxml>=5.2.2",
    "requests>=2.32.3",
    "wasabi>=1.1.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"