[project]
name = "govuk-stats-counter"
version = "0.1.0"
description = ""
authors = [
    {name = "Matthew Upson", email = "matt@mattupson.com"}
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "lxml>=5.2.2",
    "requests>=2.32.3",
    "matplotlib>=3.7.0",
]

[dependency-groups]
dev = [
    "pre-commit>=3.0.0",
    "ruff>=0.1.0",
    "pytest>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]

